# PDL-RCF

./: .gitignore  .replit  AI_USAGE_GUIDE.md  CHANGELOG_REPLIT.md  COMPATIBILITY_CHECK.md  DEPLOY_STATUS.md  Dockerfile  GITHUB_SETUP.md  LICENSE  QUICK_START_REPLIT.md  README.md  README_RENDER.md  README_REPLIT.md  REPLIT_AI_SETUP.md  app.py  build_exe.py  compilar_exe.bat  docker-compose.yml  gunicorn_config.py  pyproject.toml  render.yaml  render_config.py  render_simulation.py  replit.nix  replit_config.py  replit_start.py  requirements.txt  setup_github.ps1  setup_github.sh  test_replit_compatibility.py  wsgi.py
.github/workflows/: replit-deploy.yml
